# gemini_video_analyze_mcp

./: .env.example  README.md  pyproject.toml
src/: config.py  gemini_client.py  server.py
